[gd_scene load_steps=60 format=2]

[ext_resource path="res://creatures/archer/Normal Attack.png" type="Texture" id=1]
[ext_resource path="res://creatures/archer/High Attack.png" type="Texture" id=2]
[ext_resource path="res://system/debug/move_vector.tscn" type="PackedScene" id=3]
[ext_resource path="res://creatures/archer/death.png" type="Texture" id=4]
[ext_resource path="res://creatures/ArcherAIController.gd" type="Script" id=5]
[ext_resource path="res://creatures/archer/Idle and running.png" type="Texture" id=6]
[ext_resource path="res://creatures/archer/Low attack.png" type="Texture" id=7]
[ext_resource path="res://creatures/archer/archer.gd" type="Script" id=8]
[ext_resource path="res://system/InitMob.gd" type="Script" id=9]
[ext_resource path="res://creatures/star.png" type="Texture" id=10]
[ext_resource path="res://creatures/archer/STWalk.gd" type="Script" id=11]
[ext_resource path="res://creatures/archer/STFire.gd" type="Script" id=12]
[ext_resource path="res://creatures/archer/STStunned.gd" type="Script" id=13]
[ext_resource path="res://creatures/archer/STChase.gd" type="Script" id=14]
[ext_resource path="res://creatures/HealthBar.gd" type="Script" id=15]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 128, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 192, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 256, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 320, 384, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 1 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 1 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "shoot_high",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": false,
"name": "shoot_low",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": false,
"name": "shoot_med",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=41]
radius = 4.18922

[sub_resource type="DynamicFontData" id=42]
font_path = "res://system/debug/nokiafc22.ttf"

[sub_resource type="DynamicFont" id=43]
size = 8
font_data = SubResource( 42 )

[sub_resource type="Theme" id=44]
default_font = SubResource( 43 )

[node name="Archer" type="KinematicBody2D" groups=[
"creature",
]]
collision_layer = 32
script = ExtResource( 8 )
mob_id = "203393849"

[node name="PhysicsCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Dropping" type="Node2D" parent="."]
position = Vector2( 0.794594, 20.792 )

[node name="Holding" type="Node2D" parent="."]
position = Vector2( 0.397301, 9.27031 )

[node name="Sprite" type="Sprite" parent="Holding"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 40 )
animation = "idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.132431, 16.9514 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.264862, -11.5217 )
shape = SubResource( 41 )

[node name="move_vector" parent="." instance=ExtResource( 3 )]
track_vector = "move"
color = Color( 1, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 10.0
margin_top = -17.0
margin_right = 51.0
margin_bottom = -3.0
theme = SubResource( 44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArcherAIController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="STStunned" type="Node" parent="ArcherAIController"]
script = ExtResource( 13 )

[node name="STChase" type="Node" parent="ArcherAIController"]
script = ExtResource( 14 )

[node name="STFire" type="Node" parent="ArcherAIController"]
script = ExtResource( 12 )

[node name="STWalk" type="Node" parent="ArcherAIController"]
script = ExtResource( 11 )

[node name="InitMob" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Star" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -24 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 10 )

[node name="HealthBar" type="Node2D" parent="."]
z_index = 4
script = ExtResource( 15 )
health_max = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
